<resources>
    <string name="app_name">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="date_text">Date : </string>
    <string name="min_temperature_text">Min temperature : </string>
    <string name="max_temperature_text">Max temperature : </string>
    <string name="humidity_text">Humidity : </string>
    <string name="pressure_text">Pressure : </string>
    <string name="current_city_button">Track</string>
    <string name="degree">K°</string>
    <string name="percent">%</string>
    <string name="date_format">E
yyyy-MM-dd</string>
</resources>